--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       </figure>
   
       <div id="hover">
-        <h2 class="-txt2">Club Deportivo</h2>
-        <h1 class="-txt1">Managua Bears<i class="fa-solid fa-paw"></i></h1>
-        <p class="-txtp">Unete a nuestro club y diviértete entrenando para ser el mejor</p>
-        <p class="-txtp">Mira nuestros Planes de Afilación disponibles</p>
+        <h2 class="texto-txt2">Club Deportivo</h2>
+        <h1 class="texto-txt1">Managua Bears<i class="fa-solid fa-paw"></i></h1>
+        <p class="texto-txtp">Unete a nuestro club y diviértete entrenando para ser el mejor</p>
+        <p class="texto-txtp">Mira nuestros Planes de Afilación disponibles</p>
         <div>
           <button class="btn btnUnete"><a href="#planes">Únete</a></button>
         </div>
@@ -71,23 +71,22 @@
     </div>
 
     <section id="planes">
-      <h2 class="-txt1">Nuestras ofertas</h2>
+      <h2 class="texto-txt1">Nuestras ofertas</h2>
       <table class="table table-responsive table-striped table-hover" id="tablaPlanes">
         <thead>
           <tr>
-            <th>Código</th>
-            <th>PLAN</th>
-            <th>Plazo</th>
-            <th>Anualidad</th>
-            <th></th>
+            <th class="texto-txt2">Código</th>
+            <th class="texto-txt2">PLAN</th>
+            <th class="texto-txt2">Plazo</th>
+            <th class="texto-txt2">Anualidad</th>
+            <th class="texto-txt2"></th>
           </tr>
         </thead>
         <tbody id="tablaBody">
           <tr>
 
           </tr>
-          <td id="" onclick="VerDetalle()">
-            <button type= "button" class="btn btn-primary -txtp" data-bs-toggle="modal" data-bs-target="#exampleModal">Más Informacion</button> </td>
+          
         </tbody>
       </table>
     </section>
@@ -109,47 +108,46 @@
       <div class="modal-body">
         <div class="card" id="cardPlan">
           <div class="card-body">
-            <p class="card-text" id="cod">  </p>
-            <p class="card-text" id="plazo"></p>
-            <p class="card-text" id="anual"></p>
-            <p class="card-text" id="benef"></p>
-            <p class="card-text" id="restricc"> </p>
-            <p class="card-text" id="nota"> </p>
+            <p class="card-text texto-txt2" id="cod">  </p>
+            <p class="card-text texto-txt2" id="plazo"></p>
+            <p class="card-text texto-txt2" id="anual"></p>
+            <p class="card-text texto-txtp" id="benef"></p>
+            <p class="card-text texto-txtp" id="restricc"> </p>
+            <p class="card-text texto-txtnota" id="nota"> </p>
           </div>
         </div>
       </div>
 
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary">¡Me uno!</button>
       </div>
 
     </div>
   </div>
 </div>
 
-
 </main>
 
 <footer id="contact">
-  <h1 class="-txt2">Cont&aacute;ctanos</h1>
+  <h1 class="texto-txt2">Cont&aacute;ctanos</h1>
   <section>
     <div>
       <div>
-          <p class="-txtp"><i class="fa-solid fa-envelope"></i>managuabears@gmail.com</p>
+          <p class="texto-txtp"><i class="fa-solid fa-envelope"></i>managuabears@gmail.com</p>
       </div>
       <div>
-      <p class="-txtp"><i class="fa-solid fa-mobile"></i>+505 7845 4798</p>
+      <p class="texto-txtp"><i class="fa-solid fa-mobile"></i>+505 7845 4798</p>
       </div>
     </div>
 
     <div>
       <div>
-          <p class="-txtp"><i class="fa-brands fa-instagram-square"></i>Managua Bears</p>
+          <p class="texto-txtp"><i class="fa-brands fa-instagram-square"></i>Managua Bears</p>
       </div>
       <div>
-      <p class="-txtp"><i class="fa-solid fa-map-location-dot"></i>Lorem ipsum dolor sit, amet </p>
-      <p class="-txtp">consectetur adipisicing  elit. Temporibus, placeat!</p>
+      <p class="texto-txtp"><i class="fa-solid fa-map-location-dot"></i>Lorem ipsum dolor sit, amet </p>
+      <p class="texto-txtp">consectetur adipisicing  elit. Temporibus, placeat!</p>
       </div>
     </div>
     
